--- a/PrismWpfTemplate.Modules/PrismWpfTemplate.Modules.Example/Views/Example.xaml
+++ b/PrismWpfTemplate.Modules/PrismWpfTemplate.Modules.Example/Views/Example.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PrismWpfTemplate.Modules.Example.Views.Example"
+﻿<UserControl x:ClassModifier="internal" x:Class="PrismWpfTemplate.Modules.Example.Views.Example"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
